# ai_collab_analyzer

./: .gitignore  ITERATION.md  LICENSE  MULTI-PERSPECTIVE-ANALYSIS.md  README.md  SPECS.md  cli.py  pyproject.toml
analyzers/: base_analyzer.py  coherence_analyzer.py  coupling_analyzer.py  fix_detector.py  health_analyzer.py  multi_perspective_analyzer.py  pattern_analyzer.py  predictive_analyzer.py  prompt_analyzer.py
benchmarking/: benchmark_calculator.py
core/: commit.py  file_history.py  repository.py
examples/github.com_cocoindex-io_cocoindex/: TEMPORAL_COUPLING_EXPLAINED.md  (+1 more)
extractors/: git_extractor.py  prompt_extractor.py
github.com_Eden-Kramer-Lab_ripple_detection/: report.html
github.com_cocoindex-io_cocoindex/: report.html
metrics/: basic_metrics.py  performance_metrics.py  predictive_metrics.py  security_metrics.py  semantic_metrics.py  structural_metrics.py
models/: benchmarks.py  change_patterns.py  coherence.py  perspectives.py  predictions.py  prompt_insights.py  recommendations.py
multi_repo/: aggregator.py  comparator.py
nlp/: __init__.py  message_analyzer.py  sentiment_analyzer.py  topic_extractor.py
parsers/: ast_parser.py  language_detector.py
perspectives/: base_perspective.py  performance_perspective.py  security_perspective.py  semantic_perspective.py  structural_perspective.py
recommendations/: engine.py
reporters/: html_reporter.py  link_generator.py
similarity/: code_similarity.py  pattern_matcher.py
storage/: database.py  models.py
visualizers/: chart_builder.py  network_visualizer.py  radar_chart_builder.py
(+4 files in other folders)
