[tool.poetry]
name = "ai_collab_analyzer"
version = "0.1.0"
description = "Analyze patterns in human-AI collaboration from git repositories"
authors = ["Virgil Chereches"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydriller = "^2.0"
pandas = "^2.0"
plotly = "^5.0"
streamlit = "^1.42.0"
uvicorn = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
